--- a/02_Mountain/index.html
+++ b/02_Mountain/index.html
@@ -1,1 +1,86 @@
+<!DOCTYPE html>
+<html lang="en">
 
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <link rel="icon" href="favicon.png">
+    <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@300&family=Sacramento&display=swap"
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Allison&display=swap" rel="stylesheet">
+
+</head>
+
+<body>
+
+    <div class="top">
+        <img class="top-cloud" src="cloud.png" alt="cloud-images">
+        <h1 class="name1">I'm Ayush.</h1>
+        <p class="name2">A <span class="underline">Pro</span>grammer</p>
+
+        <img class="bottom-cloud" src="cloud.png" alt="cloud-images">
+        <img class="mountain" src="mountain.png" height="400px" alt="mountain-images">
+    </div>
+
+
+
+    <div class="middle-container">
+        <div class="profile">
+            <img class="ayush" src="final.png" height="240px" alt="ANGELA">
+            <h2>Hello.</h2>
+            <p class="intro">I am an IOS and Web Developer.I'm the founder and CTO of The App Brewery.I love coffee and
+                brew my wn beers.
+            </p>
+        </div>
+        <hr>
+        <div class="skills">
+            <h2 class="myskills">My Skills.</h2>
+            <div class="skill-row">
+                <img class="image1" src="chillies.png" alt="chillies">
+                <h3>Design and Development</h3>
+
+                <p>I Started learning to code when I was 12 year old because I wanted to make my own video games. Over
+                    time, I have gained
+                    a waelth of experience designing and devloping mobile and web applications.</p>
+
+
+            </div>
+            <div class="skill-row">
+                <img class="image2" src="computer.png" alt="computer">
+                <h3>Hot Wings challenges</h3>
+                <p>But my best skills is actually in eating hot wings. I am the undisputed king of hot wing challenges.
+                    Ghost peppers
+                    and carolina Reapers are my favorrite snacks.</p>
+
+
+            </div>
+        </div>
+        <hr>
+        <div class="contact-me">
+            <h2>Get In Touch</h2>
+            <h3>If you love hot wings as much as i do.</h3>
+            <p class="contact-message">ove hot wings as much as I do? Let's talk about how
+                awesome thet are! We can code while we eat hot wings!.</p>
+            <a class="btn" href="mailto:rathoreayush2905@gmail.com">CONTACT ME</a>
+        </div>
+    </div>
+
+
+
+    <div class="bottom-container">
+        <div class="last">
+            <a class="footer-link" href="https://www.linkedin.com/">LinkedIn</a>
+            <a class="footer-link" href="https://twitter.com/">Twitter</a>
+            <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+        </div>
+        
+        <p class="copyright">© 2018 Ayush Rathore.</p>
+    </div>
+
+
+</body>
+
+</html>
